overflow problem fixed in homepage

--- a/src/components/Homepage.css
+++ b/src/components/Homepage.css
@@ -9,7 +9,7 @@
     align-items:center;
     height:100vh;
     background-position:center center;
-    object-fit:contain;
+    /* object-fit:contain; */
     background-size:cover;
 }
 
@@ -79,16 +79,26 @@
 }
 
 @media(max-width:710px){
-    
+    .homepage{
+        width:100vw;
+        height:100vh;
+        overflow-x:hidden;
+    }  
 }
 
 @media(max-width:610px){
     .homepage{
-        width:100vw;
+        width:110vw;
+        height:100vh;
+        overflow-x:hidden;
     }   
 }
 
 @media(max-width:410px){
+    .homepage{
+        width:110vw;
+        overflow-x:hidden;
+    }  
     .heading__text{
         font-size:40px;
     }
